[gd_scene load_steps=38 format=3 uid="uid://vh7pmputa7r3"]

[ext_resource type="Script" path="res://player/player.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bakhybw84p1jf" path="res://player/ducky_2_spritesheet.png" id="4_cicsv"]
[ext_resource type="AudioStream" uid="uid://sjod173axgwf" path="res://player/jump.wav" id="5"]

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(37.5, 53.25)

[sub_resource type="Gradient" id="Gradient_73vmx"]
offsets = PackedFloat32Array(0.992958, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w6kuv"]
gradient = SubResource("Gradient_73vmx")
width = 100
height = 20
fill_from = Vector2(0.65534, 0.631068)
fill_to = Vector2(0.951456, 0)

[sub_resource type="Gradient" id="Gradient_2f0au"]
offsets = PackedFloat32Array(0, 0.0140845, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.950704, 0.902377, 0.370775, 1, 1, 0.949167, 0.39, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_08ij1"]
gradient = SubResource("Gradient_2f0au")
width = 100
height = 20
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)
metadata/_snap_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_xny5q"]
atlas = ExtResource("4_cicsv")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4m66"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dph1g"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjcdg"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_il7oc"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_702ut"]
atlas = ExtResource("4_cicsv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq2vk"]
atlas = ExtResource("4_cicsv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmlws"]
atlas = ExtResource("4_cicsv")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7nps"]
atlas = ExtResource("4_cicsv")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eytw1"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irvhk"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v108"]
atlas = ExtResource("4_cicsv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oy3s"]
atlas = ExtResource("4_cicsv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk5md"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ns5m"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbx0t"]
atlas = ExtResource("4_cicsv")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71mpw"]
atlas = ExtResource("4_cicsv")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnvns"]
atlas = ExtResource("4_cicsv")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhmuc"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_824ry"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3q0t"]
atlas = ExtResource("4_cicsv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v5ju"]
atlas = ExtResource("4_cicsv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwx6"]
atlas = ExtResource("4_cicsv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ppn3"]
atlas = ExtResource("4_cicsv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y20qg"]
atlas = ExtResource("4_cicsv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rxkj"]
atlas = ExtResource("4_cicsv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv8dh"]
atlas = ExtResource("4_cicsv")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2udo"]
atlas = ExtResource("4_cicsv")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_avol8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xny5q")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4m66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dph1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjcdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il7oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_702ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq2vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmlws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7nps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eytw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irvhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v108")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oy3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk5md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ns5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbx0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xny5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71mpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnvns")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xny5q")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhmuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_824ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3q0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v5ju")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oy3s")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ppn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y20qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rxkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv8dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2udo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_mask = 30
floor_constant_speed = true
platform_on_leave = 2
platform_floor_layers = 24
script = ExtResource("3")

[node name="PlatformDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 6)
collision_mask = 8

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -28)
offset = Vector2(0, 50)
limit_left = -715
limit_top = -1000000
limit_right = 1425
limit_bottom = 690
drag_vertical_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.25, -13.375)
shape = SubResource("11")

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
volume_db = -3.0

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="ChargeBar" type="TextureProgressBar" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -29.0
offset_right = 50.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
texture_under = SubResource("GradientTexture2D_w6kuv")
texture_progress = SubResource("GradientTexture2D_08ij1")
metadata/_edit_use_anchors_ = true

[node name="PowerLoopLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -52.0
offset_right = 127.0
grow_horizontal = 2
grow_vertical = 0
text = "for (int i = 0; i < MAX_POWER; i++)"
metadata/_edit_use_anchors_ = true

[node name="CurrentILabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -30.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="TextParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 18.75)

[node name="ParticlesContainer" type="Control" parent="."]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedDuck" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -18.75)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_avol8")
animation = &"charge"
